Closed
Bug 173311
Opened 23 years ago
Closed 23 years ago
[Macho] RealPlayer One 9.0b2 causes crash at start-up [@ js_AtomizeString]
Categories
(Core :: XPCOM, defect)
Tracking
()
VERIFIED
FIXED
mozilla1.3beta
People
(Reporter: nacohen, Assigned: ccarlen)
References
Details
(Keywords: crash)
Crash Data
Attachments
(2 files)
|
2.80 KB,
text/plain
|
Details | |
|
9.76 KB,
patch
|
ccarlen
:
review+
sfraser_bugs
:
superreview+
dbaron
:
approval+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021007 Chimera/0.5+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X; en-US; rv:1.0.1) Gecko/20021007 Chimera/0.5+
I installed the new RealPlayer One 9.0b2 beta today. Navigator 0.5 plus latest
nightly builds) began crashing at start-up. IE, Omniweb still ran fine. After
trying many other things (reinstall, preference deletion, privilege repair,
etc.) I removed the two aliases that realplayer had in my Internet Plug-in
folder. Navigator once again began launching without problem.
Reproducible: Always
Steps to Reproduce:
1.Install Real Player 9.0b2 beta.
2.Launch Navigator
3.
Actual Results:
Crash on start-up
Expected Results:
Chimera should have launched.
See crash log.
| Reporter | ||
Comment 1•23 years ago
|
||
Comment 2•23 years ago
|
||
*** Bug 173215 has been marked as a duplicate of this bug. ***
Comment 4•23 years ago
|
||
If I just remove the RealPlayer Plugin.xpt file from /Library/Internet Plug-Ins,
the application launchs for me.
Comment 5•23 years ago
|
||
I can reproduce this issue with a second mac running Chimera (2002-10-07-04)
after installing RP B2. Removing the RealPlayer Plugin.xpt alias allows Chimera
to launch succeusfully. Tested under 10.2.
Comment 6•23 years ago
|
||
Well apparently the xpt file activates the nsScriptSecurityManager which is
causing the problem.
This, unfortunately, does not crash on my machine.
Comment 7•23 years ago
|
||
*** Bug 173424 has been marked as a duplicate of this bug. ***
Comment 8•23 years ago
|
||
I had the same crash , but only with one specific user account. I have
personnaly two account on my system, when I use the one with wich I install and
launch realplayer for the last time, no problem with Navigator.
If logout and log-on with my second account , navigator crash at startup. Could
this be related to credentials and read/write permissions of the realplayer plugin.
Comment 9•23 years ago
|
||
*** Bug 173454 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
*** Bug 173460 has been marked as a duplicate of this bug. ***
Comment 11•23 years ago
|
||
*** Bug 173455 has been marked as a duplicate of this bug. ***
Updated•23 years ago
|
Target Milestone: --- → Chimera0.6
Comment 12•23 years ago
|
||
I think this crash may only happen with optimized builds, and then only if you
delete xpti.dat in the components directory.
Comment 13•23 years ago
|
||
>delete xpti.dat in the components directory.
Hmm, ok, I'll try that... I've installed Real Player 3 times, moved it around,
done tried nightly bits and debug bit... so far it has worked for me every time.
Comment 14•23 years ago
|
||
Ok, I see the xptiInterfaceInfoManager throwing some errors. It looks like it's
failing to read the file because its stated file size doesn't agree with it's
actual file size.
Comment 15•23 years ago
|
||
*** Bug 173643 has been marked as a duplicate of this bug. ***
Comment 16•23 years ago
|
||
*** Bug 173656 has been marked as a duplicate of this bug. ***
Comment 17•23 years ago
|
||
A stupid question? shouldn't there be some code in the plugin handlers that
saves chimera from crashing when plugins do or are weird things?
Comment 18•23 years ago
|
||
*** Bug 173660 has been marked as a duplicate of this bug. ***
Comment 19•23 years ago
|
||
*** Bug 173710 has been marked as a duplicate of this bug. ***
Comment 20•23 years ago
|
||
Here's the deal. What's actually happening is that the RealPlayer Plugin.xpt
alias is causing NS_InitEmbedding to fail, and we crash later dereffing a NULL
JSContext.
The real problem here is how we deal with autoregistering things that are
aliases. Right now, we have some differences between debug and opt behaviour (in
nsLocalFile::GetParent) which explain why this is opt only.
| Assignee | ||
Comment 22•23 years ago
|
||
Patch does a few things:
(1) Fixes xptiInterfaceInfoManager so that it sets the state of the followLinks
attribute on the files it uses. Here's the problem: xptiInterfaceInfoManager
scans some directory and finds an .xpt file (/foo/file.xpt). In this case,
file.xpt is an alias and the file that xpti is using has followLinks == TRUE.
Later, xpti calls GetParent() on file.xpt and, since file.xpt is an alias and
the actual file is elsewhere, the parent is not /foo. This causes
xptiInterfaceInfoManager to freak. The fix is to turn off followLinks when
scanning directories - just return the files that are actual children of the
enumerated dirs, not the resolved alias files. Then, when actually reading the
file, set followLinks to true because we want to read the actual file, not the
alias.
(2) Removes the DEBUG code in GetParent() which was originally put in to work
around the above problem.
(3) OpenNSPRFileDesc and OpenANSIFileDesc were not observing the state of
followLinks.
need r=.
| Assignee | ||
Comment 23•23 years ago
|
||
BTW, since more of our code should probably pay attention to the followLinks
state, setting it to some state, using the file, and then restoring it, this
little object:
http://lxr.mozilla.org/seamonkey/source/xpcom/io/nsLocalFileOSX.cpp#86
should be made public. It makes restoration of the previous state automatic. Of
course, it would have to take an nsILocalFile* instead of an nsLocalFile&.
Doug, what do you think of this little util? (As in where it could live)
Comment 24•23 years ago
|
||
Comment on attachment 102579 [details] [diff] [review]
patch
I like having one version of GetParent a whole lot better. r=bnesse.
Comment 25•23 years ago
|
||
*** Bug 173895 has been marked as a duplicate of this bug. ***
Comment 26•23 years ago
|
||
*** Bug 173922 has been marked as a duplicate of this bug. ***
Comment 27•23 years ago
|
||
Revising summary.
Keywords: crash
Summary: RealPlayer One 9.0b2 causes crash at startup → RealPlayer One 9.0b2 crashes Chimera at start-up [@ js_AtomizeString]
| Assignee | ||
Comment 28•23 years ago
|
||
Checked into Chimera branch. Still needs an sr= for trunk since Mach-0 mozilla
will have the same problem.
Comment 29•23 years ago
|
||
conrad, I do not think that this is critical to a Gecko API. Feel free to file
a bug. I will probably future it unless you have patches for this. This code
would exist in the xpcom/glue, of course.
Comment 30•23 years ago
|
||
*** Bug 173974 has been marked as a duplicate of this bug. ***
Comment 31•23 years ago
|
||
*** Bug 173955 has been marked as a duplicate of this bug. ***
Comment 32•23 years ago
|
||
*** Bug 174068 has been marked as a duplicate of this bug. ***
Comment 33•23 years ago
|
||
*** Bug 174051 has been marked as a duplicate of this bug. ***
Comment 34•23 years ago
|
||
*** Bug 174064 has been marked as a duplicate of this bug. ***
Comment 35•23 years ago
|
||
*** Bug 174015 has been marked as a duplicate of this bug. ***
Comment 36•23 years ago
|
||
*** Bug 174169 has been marked as a duplicate of this bug. ***
Comment 37•23 years ago
|
||
Should this be resolved per comment 28?
Comment 38•23 years ago
|
||
Whoops, this isn't fixed. Chimera/2002101104 still crashes on start-up at js_AtomizeString.
Comment 39•23 years ago
|
||
*** Bug 174309 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 40•23 years ago
|
||
> Whoops, this isn't fixed. Chimera/2002101104 still crashes on start-up at
js_AtomizeString.
Notice that at 2002101104 the fix was not checked in.
Comment 41•23 years ago
|
||
Yep, this problem isn't occuring with the 2002-10-12-04 build running under 10.2.1.
Updated•23 years ago
|
Whiteboard: [fixed in chimera]
Keywords: realplayer
Comment 42•23 years ago
|
||
Moving to browser, since that's where we need a fix now.
Component: Plug-ins → XPCOM
Product: Chimera → Browser
Target Milestone: Chimera0.6 → ---
Version: unspecified → other
| Assignee | ||
Comment 43•23 years ago
|
||
> Moving to browser, since that's where we need a fix now.
Arg. Just downloaded a Mach-0 nightly and was painfully reminded of that. This
patch needs sr= as the first step in getting on the trunk.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.3beta
Comment 44•23 years ago
|
||
Comment on attachment 102579 [details] [diff] [review]
patch
sr=sfraser
Attachment #102579 -
Flags: superreview+
Comment 45•23 years ago
|
||
I am seeing similar symptoms (same backtrace as the one attached and crashing on
startup.) but, while I have the RealOne 9.0b2 player installed, this only started to happen
once I tried one of the nightly builds (20021017*, I believe) and then backed down to 0.5
release after having a few crashes long after the browser started up. (The nightly build
was consistenly crashing on the NY Times web page starting yesterday evening.) Now
0.5 release is crashing upon startup even after removing /Library/Mozilla, ~/Library/
Application Support/Chimera, ~/Library/Mozilla, and ~/.mozilla and restarting. (There was
a zombie process of Chimera sitting around.)
If this should be filed as a seperate bug, please let me know.
Comment 46•23 years ago
|
||
No, same bug. Only open a new bug if a recent nightly still crashes.
Updated•23 years ago
|
Summary: RealPlayer One 9.0b2 crashes Chimera at start-up [@ js_AtomizeString] → [Macho] RealPlayer One 9.0b2 causes crash at start-up [@ js_AtomizeString]
| Assignee | ||
Comment 47•23 years ago
|
||
Comment on attachment 102579 [details] [diff] [review]
patch
putting bnesse's r= here. I'll see if I can get this into 1.2 but it does touch
some common, XP code.
Attachment #102579 -
Flags: review+
Comment on attachment 102579 [details] [diff] [review]
patch
a=dbaron for trunk checkin
Attachment #102579 -
Flags: approval+
| Assignee | ||
Comment 49•23 years ago
|
||
Fixed on trunk.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Whiteboard: [fixed in chimera]
Comment 50•23 years ago
|
||
Verified on the 2002-11-04-07 trunk build under 10.1.5.
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Crash Signature: [@ js_AtomizeString]
You need to log in
before you can comment on or make changes to this bug.
Description
•