Bug 173311 - .xpt files which are aliases (RealPlayer One) cause crash at startup. r=bnesse